@@ -1,4 +1,4 @@
-Copyright (C) 2011 Daniel Friesel <derf@finalrewind.org>
+Copyright (C) 2011-2014 Daniel Friesel <derf@finalrewind.org>
 
 All files in this distribution are licensed under the same terms as Perl
 itself.
